city to location for signup page. Fixed the alignment issue on browse page

--- a/imports/ui/components/browse/browse.scss
+++ b/imports/ui/components/browse/browse.scss
@@ -64,11 +64,11 @@
 
 }
 
-@media(max-width: 1280px){
-	.candidates:first-child{
-		margin: 0 20px 0 0;
-	}
-}
+// @media(max-width: 1280px){
+// 	.candidates:first-child{
+// 		margin: 0 20px 0 0;
+// 	}
+// }
 
 @media(max-width: 600px){
 	.candidates:first-child {
